# legal-pad

./: Cargo.toml  README.md  notes.txt
notes/: work.txt
src/: main.rs  utils.rs
src/utils/: argparse.rs  file_writing.rs  mod.rs  search.rs  semantic_search.rs  view_notes.rs  viewer.rs
