[package]
name = "pad"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
crossterm = "0.27"
ratatui = "0.24"
dirs = "5.0"
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
hnsw_rs = "0.1.0"
tch = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"